2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

        * godmode/reporting/visual_console_builder.wizard.php: Unsorted
        combo in visual console wizard to switch the default type of item
        to static graph to preserve the previous default behaviour.

2012-04-23  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/menu.php
	  operation/agentes/exportdata.php: Fixed bug: Error exporting
	data to excel or csv.

	* operation/agentes/exportdata.csv.php
	operation/agentes/exportdata.excel.php: Added files.

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_networkmap.php
	 include/functions_ui.php
	 operation/agentes/networkmap_list.php
	 operation/agentes/networkmap.php
	 operation/agentes/stat_win.php
	 operation/menu.php: Added new view with a list of networkmaps.
	 
	 Fixes: #3519785

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/javascript/jquery.pandora.js,
	include/functions_db.php: cleaned source code style.
	
	* include/functions_users.php, index.php, operation/menu.php,
	operation/users/webchat.php, include/javascript/webchat.js,
	general/header.php: added first version of webchat.
	
	* include/functions.php: into the function "check_login" added the
	parameter $output for some cases don't want see the error page like
	as the ajax querys.

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/search_reports.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.item_editor.php: Fixed some issues
	with reportin usability related to new menu structure.

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	*extensions/snmp_explorer.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/ver_agente.php,
	operation/search_agents.php,
	operation/snmpconsole/snmp_view.php,
	operation/gis_maps/render_view.php,
	godmode/agentes/fields_manager.php,
	godmode/agentes/configure_field.php,